footer, nav fix, remove scrollbar

--- a/portfolio/components/footer/footer.module.scss
+++ b/portfolio/components/footer/footer.module.scss
@@ -1,14 +1,35 @@
+.footer {
+  margin: 5vmax 0 0 0;
+}
+
+.footerSectionContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 3vmax 0 5vmax 0;
+}
+
 .footerSection {
   display: flex;
   flex-direction: column;
-  background-color: red;
+  margin: 0 7vmax;
 }
 
 .footerSectionHeadline {
   font-weight: bold;
 }
 
-a.footerSection {
-  color: #fff;
-  text-decoration: none;
+.footerSectionItem {
+  margin: 0.5em 0;
+}
+
+.footerSectionItem:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.footerSeparator {
+  height: 0.5px;
+  opacity: 0.2;
+  margin: 0;
 }
